ingress-tutorial/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cary-deploy
  namespace: carolina-ns
  labels:
    app: cary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cary
  template:
    metadata:
      labels:
        app: cary
    spec:
      volumes:
      - name: workdir
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:1.21.5-alpine
        volumeMounts:
        - name: workdir
          mountPath: "/usr/share/nginx/html"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apex-deploy
  namespace: carolina-ns
  labels:
    app: apex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apex
  template:
    metadata:
      labels:
        app: apex
    spec:
      volumes:
      - name: workdir
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:1.21.5-alpine
        volumeMounts:
        - name: workdir
          mountPath: "/usr/share/nginx/html"
        ports:
        - containerPort: 80
