ingress-tutorial/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cary-svc
  namespace: carolina-ns
spec:
  selector:
    app: cary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: apex-svc
  namespace: carolina-ns
spec:
  selector:
    app: apex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
